--- a/Flynas_IOS/test-output/emailable-report.html
+++ b/Flynas_IOS/test-output/emailable-report.html
@@ -31,12 +31,12 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">58.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">106.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC</td><td><a href="#m1"><b>TC_2a_oneWayDomesticBusinessCC</b> (ios) </a></td><td class="numi">1</td><td>1531726500410</td><td class="numi">45181</td></tr>
+<tr class="failedodd"><td rowspan="1">flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC</td><td><a href="#m1"><b>TC_2a_oneWayDomesticBusinessCC</b> (ios) </a></td><td class="numi">1</td><td>1533128072539</td><td class="numi">95855</td></tr>
 </table>
 <h1>Default test</h1>
 <h2 id="m1">flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC:TC_2a_oneWayDomesticBusinessCC</h2>
@@ -71,14 +71,15 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <td>Validate One way Domestic one Adult Simple class booking</td>
 </tr>
 <tr><td style="padding-left:3em" colspan="27">
-<p>Step Clicking on Book Icon Failed with description Failed to click on Book Icon expected [true] but found [false]</p>
+<p>Step Click Failed with description Unable to click on Find Flights expected [true] but found [false]</p>
 org.testng.Assert.fail(Assert.java:94)
 <br/>at org.testng.Assert.failNotEquals(Assert.java:494)
 <br/>at org.testng.Assert.assertTrue(Assert.java:42)
 <br/>at com.ctaf.support.HtmlReportSupport.onFailure(HtmlReportSupport.java:779)
 <br/>at com.ctaf.utilities.Reporter.failureReport(Reporter.java:91)
-<br/>at flynas.ios.workflows.Homepage.select_Bookflights(Homepage.java:18)
-<br/>at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:38)
+<br/>at com.ctaf.accelerators.ActionEngine.click_mobile(ActionEngine.java:130)
+<br/>at flynas.ios.workflows.BookingPageFlow.clickFindFlightsBtn(BookingPageFlow.java:203)
+<br/>at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:41)
 <br/>25 lines not shown
 </td></tr>
 </table>
