--- a/Flynas_IOS/test-output/index.html
+++ b/Flynas_IOS/test-output/index.html
@@ -128,14 +128,15 @@
                   </a> <!-- TC_2a_oneWayDomesticBusinessCC(One Way, RUH, DMM, Day^119, , , Day^121, 1, 0, 0, , Economy, Light, Domestic, 1, Saudi Arabia, Natio...) -->
                   <span class="method-name">TC_2a_oneWayDomesticBusinessCC</span>
                   <span class="parameters">(One Way, RUH, DMM, Day^119, , , Day^121, 1, 0, 0, , Economy, Light, Domestic, 1, Saudi Arabia, National ID Card, ABCD12ERT, , 503368612, Value, Business, Credit Card, , 0, , Validate One way Domestic one Adult Simple class booking)</span>
-                  <div class="stack-trace"><b>"java.lang.AssertionError: Step Clicking on Book Icon Failed with description Failed to click on Book Icon expected [true] but found [false]
+                  <div class="stack-trace"><b>"java.lang.AssertionError: Step Click Failed with description Unable to click on Find Flights expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:94)
 	at org.testng.Assert.failNotEquals(Assert.java:494)
 	at org.testng.Assert.assertTrue(Assert.java:42)
 	at com.ctaf.support.HtmlReportSupport.onFailure(HtmlReportSupport.java:779)
 	at com.ctaf.utilities.Reporter.failureReport(Reporter.java:91)
-	at flynas.ios.workflows.Homepage.select_Bookflights(Homepage.java:18)
-	at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:38)
+	at com.ctaf.accelerators.ActionEngine.click_mobile(ActionEngine.java:130)
+	at flynas.ios.workflows.BookingPageFlow.clickFindFlightsBtn(BookingPageFlow.java:203)
+	at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:41)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -160,14 +161,15 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)
-<br/> java.lang.AssertionError: Step Clicking on Book Icon Failed with description Failed to click on Book Icon expected [true] but found [false]
+<br/> java.lang.AssertionError: Step Click Failed with description Unable to click on Find Flights expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:94)
 	at org.testng.Assert.failNotEquals(Assert.java:494)
 	at org.testng.Assert.assertTrue(Assert.java:42)
 	at com.ctaf.support.HtmlReportSupport.onFailure(HtmlReportSupport.java:779)
 	at com.ctaf.utilities.Reporter.failureReport(Reporter.java:91)
-	at flynas.ios.workflows.Homepage.select_Bookflights(Homepage.java:18)
-	at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:38)
+	at com.ctaf.accelerators.ActionEngine.click_mobile(ActionEngine.java:130)
+	at flynas.ios.workflows.BookingPageFlow.clickFindFlightsBtn(BookingPageFlow.java:203)
+	at flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:41)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -192,7 +194,7 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)
-"</b><br>org.testng.Assert.fail(Assert.java:94)<br>org.testng.Assert.failNotEquals(Assert.java:494)<br>org.testng.Assert.assertTrue(Assert.java:42)<br>com.ctaf.support.HtmlReportSupport.onFailure(HtmlReportSupport.java:779)<br>com.ctaf.utilities.Reporter.failureReport(Reporter.java:91)<br>flynas.ios.workflows.Homepage.select_Bookflights(Homepage.java:18)<br>flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:38)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br>java.lang.reflect.Method.invoke(Method.java:497)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:714)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:767)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1123)<br>org.testng.TestNG.run(TestNG.java:1031)<br>org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)<br>
+"</b><br>org.testng.Assert.fail(Assert.java:94)<br>org.testng.Assert.failNotEquals(Assert.java:494)<br>org.testng.Assert.assertTrue(Assert.java:42)<br>com.ctaf.support.HtmlReportSupport.onFailure(HtmlReportSupport.java:779)<br>com.ctaf.utilities.Reporter.failureReport(Reporter.java:91)<br>com.ctaf.accelerators.ActionEngine.click_mobile(ActionEngine.java:130)<br>flynas.ios.workflows.BookingPageFlow.clickFindFlightsBtn(BookingPageFlow.java:203)<br>flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(TC02_a_oneWayDomesticSimple1AdultCC.java:41)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)<br>java.lang.reflect.Method.invoke(Method.java:497)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:714)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:901)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1231)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:767)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1123)<br>org.testng.TestNG.run(TestNG.java:1031)<br>org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)<br>
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -201,7 +203,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/g4/tsfj3_r96_l45sdwsc4ch0fr0000gn/T/testng-eclipse--1144045089/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/g4/tsfj3_r96_l45sdwsc4ch0fr0000gn/T/testng-eclipse--1132239072/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -262,12 +264,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TC_2a_oneWayDomesticBusinessCC')
 data.setCell(0, 2, 'flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC')
-data.setCell(0, 3, 45181);
+data.setCell(0, 3, 95855);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -295,26 +297,26 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">setupSuite(org.testng.TestRunner@4b6ac111)</span>
+                <span class="method-name">setupSuite(org.testng.TestRunner@5d066c7d)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">reportHeader(public void flynas.ios.uat.reg.TC02_a_oneWayDomesticSimple1AdultCC.TC_2a_oneWayDomesticBusinessCC(ja...)</span>
-                <span class="method-start">66946 ms</span>
+                <span class="method-start">5821 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">TC_2a_oneWayDomesticBusinessCC(One Way, RUH, DMM, Day^119, , , Day^121, 1, 0, 0, , Economy, Light, Domestic, 1, Saudi Arabia, Natio...)</span>
-                <span class="method-start">73337 ms</span>
+                <span class="method-start">10987 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDownMethod</span>
-                <span class="method-start">118521 ms</span>
+                <span class="method-start">106845 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
-                <span class="method-name">tearDown(org.testng.TestRunner@4b6ac111)</span>
-                <span class="method-start">125437 ms</span>
+                <span class="method-name">tearDown(org.testng.TestRunner@5d066c7d)</span>
+                <span class="method-start">112312 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
